crates/cli/tests/snapshots/activate_test__activate__passes_args_through-2.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---

export __ORIG_PATH="$PATH"

_proto_activate_hook() {
  local previous_exit_status=$?;
  local output;
  trap '' SIGINT;
  output=$(proto activate bash --config-mode upwards-global --no-bin --no-shim --export)
  if [ -n "$output" ]; then
    eval "$output";
  fi
  trap - SIGINT;
  return $previous_exit_status;
};

if [[ ";${PROMPT_COMMAND[*]:-};" != *";_proto_activate_hook;"* ]]; then
  if [[ "$(declare -p PROMPT_COMMAND 2>&1)" == "declare -a"* ]]; then
    PROMPT_COMMAND=(_proto_activate_hook "${PROMPT_COMMAND[@]}")
  else
    PROMPT_COMMAND="_proto_activate_hook${PROMPT_COMMAND:+;$PROMPT_COMMAND}"
  fi
fi

_proto_activate_hook
