crates/cli/tests/snapshots/activate_test__activate__passes_args_through-4.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---

set-env __ORIG_PATH $E:PATH

fn _proto_activate_hook {
  eval (proto activate elvish --config-mode upwards-global --no-bin --no-shim --export);
}

set @edit:before-readline = $@edit:before-readline {
  _proto_activate_hook
}

_proto_activate_hook
