crates/cli/tests/snapshots/activate_test__activate__passes_args_through-5.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---

set -gx __ORIG_PATH $PATH

function _proto_activate_hook --on-variable PWD;
  proto activate fish --config-mode upwards-global --no-bin --no-shim --export | source
end;

_proto_activate_hook
