crates/cli/tests/snapshots/activate_test__activate__passes_args_through-9.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
function proto-activate {
  $previousExitCode = $global:LASTEXITCODE;
  $exports = proto activate powershell --config-mode upwards-global --no-bin --no-shim --export;
  if ($exports) {
    $exports | Out-String | Invoke-Expression;
  }
  $global:LASTEXITCODE = $previousExitCode;
}

function proto-deactivate {
  $exports = proto deactivate powershell --export;
  if ($exports) {
    $exports | Out-String | Invoke-Expression;
  }

  if (Get-Variable -Name 'proto-activate_prompt' -Scope Global -ErrorAction Ignore) {
    Set-Item -Path 'function:global:prompt' -Value $global:proto-activate_prompt;
    Remove-Variable -Name 'proto-activate_prompt' -Scope Global;
  }

  Remove-Item -LiteralPath 'function:proto-activate' -ErrorAction Ignore;
  Remove-Item -LiteralPath 'function:proto-deactivate' -ErrorAction Ignore;
}

if (-not (Get-Variable -Name 'proto-activate_prompt' -Scope Global -ErrorAction Ignore)) {
  $global:proto-activate_prompt = $function:prompt;

  function global:prompt {
    proto-activate;
    & $global:proto-activate_prompt;
  }
};

proto-activate
