crates/cli/tests/snapshots/activate_test__activate__supports_many_tools-10.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
function proto-activate {
  $previousExitCode = $global:LASTEXITCODE;
  $exports = proto activate pwsh --export;
  if ($exports) {
    $exports | Out-String | Invoke-Expression;
  }
  $global:LASTEXITCODE = $previousExitCode;
}

function proto-deactivate {
  $exports = proto deactivate pwsh --export;
  if ($exports) {
    $exports | Out-String | Invoke-Expression;
  }

  if (Get-Variable -Name 'proto-activate_handler' -Scope Global -ErrorAction Ignore) {
    $ExecutionContext.SessionState.InvokeCommand.LocationChangedAction = [System.Delegate]::Remove(
      $ExecutionContext.SessionState.InvokeCommand.LocationChangedAction,
      $global:proto-activate_handler
    );
    Remove-Variable -Name 'proto-activate_handler' -Scope Global;
  }

  Remove-Item -LiteralPath 'function:proto-activate' -ErrorAction Ignore;
  Remove-Item -LiteralPath 'function:proto-deactivate' -ErrorAction Ignore;
}

if (-not (Get-Variable -Name 'proto-activate_handler' -Scope Global -ErrorAction Ignore)) {
  $global:proto-activate_handler = [System.EventHandler[System.Management.Automation.LocationChangedEventArgs]] {
    param([object] $source, [System.Management.Automation.LocationChangedEventArgs] $changedArgs)
    end {
      proto-activate
    }
  };

  $ExecutionContext.SessionState.InvokeCommand.LocationChangedAction = [System.Delegate]::Combine(
    $ExecutionContext.SessionState.InvokeCommand.LocationChangedAction,
    $global:proto-activate_handler
  );
};

proto-activate
